Add rudimentary WebSocket-ONLY support fixes #3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -474,11 +474,14 @@
         than 4.0 must have a registered Google Account. Devices running Android 4.0 or newer do not
         require a Google account, but must have the Play Store app installed.
     </string>
+    <string name="RegistrationActivity_websockets_only_unsupported">"This device setup is not officially supported, and if you experience bugs you will have to resolve them yourself."
+    </string>
     <string name="RegistrationActivity_we_will_now_verify_that_the_following_number_is_associated_with_your_device_s">
         Double-check that this is your number! We\'re about to verify it with an SMS.
     </string>
     <string name="RegistrationActivity_continue">Continue</string>
     <string name="RegistrationActivity_edit">Edit</string>
+    <string name="RegistrationActivity_I_understand">I Understand</string>
 
     <!-- RegistrationProblemsActivity -->
     <string name="RegistrationProblemsActivity_possible_problems">Possible problems</string>
@@ -951,6 +954,8 @@
     <string name="preferences__input_settings">Input Settings</string>
     <string name="preferences__enable_enter_key_title">Enable Enter key</string>
     <string name="preferences__replace_smiley_with_enter_key">Replace the smiley key with an Enter key</string>
+    <string name="preferences__pref_force_websocket_title">Force WebSocket</string>
+    <string name="preferences__always_use_websocket_instead_of_gcm">Always use WebSocket instead of GCM (restart required)</string>
     <string name="preferences__pref_enter_sends_title">Enter key sends</string>
     <string name="preferences__pressing_the_enter_key_will_send_text_messages">Pressing the Enter key will send text messages</string>
     <string name="preferences__display_settings">Display settings</string>
